@@ -696,7 +696,7 @@ public class FixedWidthFlexTable extends FlexTable {
     if (numColumns > 0) {
       if (columnCountMap.containsKey(numColumnsI)) {
         int numRows = columnCountMap.get(numColumnsI).intValue();
-        columnCountMap.put(numColumnsI, new Integer(numRows + 1));
+        columnCountMap.put(numColumnsI, Integer.valueOf(numRows + 1));
       } else {
         columnCountMap.put(numColumnsI, Integer.valueOf(1));
       }
